# Noctern

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  conanfile.py  conanfile.txt  flake.nix  shell.nix
.github/workflows/: ci.yml
cmake/: PresetMixins.json  write_if_diff.cmake
cmake/toolchains/: asan.cmake
examples/: basic_math.nct  simple_main.nct
src/: CMakeLists.txt  lexer.main.cpp  nocternc.main.cpp  parser.main.cpp  pp.main.cpp
src/noctern/: ast.cpp  ast.hpp  ast.test.cpp  compilation_unit.cpp  compilation_unit.hpp  debug_print.cpp  debug_print.hpp  debug_print.test.hpp  enum.cpp  enum.hpp  interpreter.cpp  interpreter.hpp  interpreter.test.cpp  iterator_facade.cpp  iterator_facade.hpp  iterator_facade.test.cpp  meta.cpp  meta.hpp  parser.cpp  parser.hpp  parser.test.cpp  placeholder.test.cpp  symbol_table.cpp  symbol_table.hpp  token.hpp  token.test.cpp  tokenize.cpp  tokenize.hpp  tokenize.test.cpp  tokenize.test.hpp
src/noctern/data/: asg.cpp  asg.hpp  ast.cpp  ast.hpp  ast.test.cpp  token.cpp  token.hpp  token.test.cpp
src/noctern/parsing/: lexer.cpp  lexer.hpp  lexer.l  parser.cpp  parser.hpp
src/noctern/utils/: debug_print.hpp  debug_print.test.hpp
